🐶 Now it loads author image!

--- a/src/styles/#generic.css
+++ b/src/styles/#generic.css
@@ -1,6 +1,11 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     min-height: 100vh;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body * {
