--- a/src/styles/#generic.css
+++ b/src/styles/#generic.css
@@ -1,11 +1,8 @@
-html {
-    scroll-behavior: smooth;
-}
+@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Mono:200&display=swap');
 
 body {
     min-height: 100vh;
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 body * {
