🚖 Refactored and remade alot of components

--- a/src/styles/#generic.css
+++ b/src/styles/#generic.css
@@ -20,6 +20,11 @@ a:hover {
     text-decoration: none;
 }
 
+textarea:focus,
+input:focus{
+    outline: none !important;
+}
+
 /** Custom CSS */
 .highlight {
     background: #e0b0343b;
